--- a/samples/src/exporterdemo/public/ExporterDemo.html
+++ b/samples/src/exporterdemo/public/ExporterDemo.html
@@ -11,7 +11,7 @@
 			a:active{color:#ff0000}
 		</style>
 
-		<script language='javascript' src='exporterDemo.ExporterDemo.nocache.js'></script>
+		<script language='javascript' src='exporterdemo.ExporterDemo.nocache.js'></script>
 		<script language='javascript'>
 		   function runTests() {
                       var employee = new test.Employee('CEO', 'Bill', 'Gates', test.Employee.MALE);
@@ -24,7 +24,9 @@
 		      print("employee2.getSelf().getGender() = "+employee.getSelf().getGender());
 		      print("Employee.sayHello(person) = "+test.Employee.sayHello(person));
 		      print("person.getSelf().getGender = (should be undefined) "+person.getSelf().getGender);
-		      employee.addListener(function(emp, str, i) { 
+                      var it = new test.Employee.InnerTest();
+                      print("Employee.InnerTest.getFoo() = "+it.getFoo());
+                      employee.addListener(function(emp, str, i) { 
                                               alert(str+" "+emp.getFirstName());
                                            });
                       employee.fire();
