Adding a very simple example
git-svn-id: https://gwt-exporter.googlecode.com/svn/trunk@36 efcdc456-a631-0410-84da-075f59a3872b

--- a/samples/src/main/webapp/index.html
+++ b/samples/src/main/webapp/index.html
@@ -12,6 +12,7 @@
     </script>
     <ul>
 		<li><a href="javascript:goTo('demo/ExporterDemo.html')">ExporterDemo.html</a></li>
+		<li><a href="javascript:goTo('simple/SimpleDemo.html')">SimpleDemo.html</a></li>
     </ul>
   </body>
 </html>
