Change folder structure so as core has its own folder as well as each example

--- a/samples/simpledemo/src/main/webapp/index.html
+++ b/samples/simpledemo/src/main/webapp/index.html
@@ -9,10 +9,7 @@
        function goTo(location) {
           window.location = location + window.location.search;
        }
+       goTo("simple/SimpleDemo.html");
     </script>
-    <ul>
-		<li><a href="javascript:goTo('demo/ExporterDemo.html')">ExporterDemo.html</a></li>
-		<li><a href="javascript:goTo('simple/SimpleDemo.html')">SimpleDemo.html</a></li>
-    </ul>
   </body>
 </html>
