rename demo sample from simpledemo to testdemo since we use it to run tests in dev mode

--- a/samples/testdemo/src/main/webapp/index.html
+++ b/samples/testdemo/src/main/webapp/index.html
@@ -9,7 +9,7 @@
        function goTo(location) {
           window.location = location + window.location.search;
        }
-       goTo("simple/SimpleDemo.html");
+       goTo("testdemo/TestDemo.html");
     </script>
   </body>
 </html>
